--- a/pyeonhalin/app/src/main/res/menu/navigation.xml
+++ b/pyeonhalin/app/src/main/res/menu/navigation.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/navigation_map"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_map_black_24dp"
         android:title="map" />
 
     <item
@@ -24,8 +24,8 @@
 
     <item
         android:id="@+id/navigation_community"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="community" />
+        android:icon="@drawable/ic_message_black_24dp"
+        android:title="commnity" />
 
 
 </menu>
