--- a/pyeonhalin/app/src/main/res/layout/item_cardview.xml
+++ b/pyeonhalin/app/src/main/res/layout/item_cardview.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="10dp"
+        card_view:cardCornerRadius="5dp"
         card_view:cardElevation="5dp">
 
         <RelativeLayout
@@ -16,8 +17,8 @@
 
             <ImageView
                 android:id="@+id/cardView_image"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:scaleType="centerCrop" />
 
             <TextView
