'add login_check'

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -10,9 +10,11 @@
 
 <form method="POST">
     <p>
-      ID:<input type="text" name="id" value="">
+      <input type="text" name="id" value="">
     </p>
-    PASS:<input type="text" name="pw" value="">
+    <input type="text" name="pw" value="">
+    </p>
+    <input type="text" name="time" value="">
 
   <input type="submit" value="로그인">
   </form>
