--- a/pyeonhalin/app/src/main/res/layout/activity_home.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_home.xml
@@ -12,4 +12,46 @@
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/navigation" />
+
+    <Button
+        android:id="@+id/test_btn_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="181dp"
+        android:text="signIn"
+        app:layout_constraintBottom_toTopOf="@+id/test_btn_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/test_btn_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="217dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="17dp"
+        android:text="signIn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/test_btn_1" />
+
+    <Button
+        android:id="@+id/test_btn_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="132dp"
+        android:layout_marginEnd="153dp"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="31dp"
+        android:text="testData"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/test_btn_2" />
 </android.support.constraint.ConstraintLayout>
