'delete session but add cookie'

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -10,9 +10,9 @@
 
 <form method="POST">
     <p>
-      ID:<input type="text" name="id" value="">
+     <input type="text" name="id" value="">
     </p>
-    PASS:<input type="text" name="pw" value="">
+    <input type="text" name="pw" value="">
 
   <input type="submit" value="회원가입">
   </form>
