--- a/pyeonhalin/app/src/main/res/layout/activity_home.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         android:layout_marginEnd="161dp"
         android:layout_marginStart="135dp"
         android:layout_marginTop="181dp"
-        android:text="signIn"
+        android:text="signUp"
         app:layout_constraintBottom_toTopOf="@+id/test_btn_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
