add toolbar at sort activity

--- a/pyeonhalin/app/src/main/res/layout/activity_sort.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_sort.xml
@@ -11,25 +11,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SortActivity">
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
+
         <include
             layout="@xml/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-
     </android.support.design.widget.AppBarLayout>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/item_recyclerview"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/sort_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/sort_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/sort_tabs" />
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
