--- a/pyeonhalin/app/src/main/res/layout/activity_event.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_event.xml
@@ -43,4 +43,11 @@
         tools:ignore="MissingConstraints" />
 
 </android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/activity_main_drawer" />
 </android.support.v4.widget.DrawerLayout>
