--- a/pyeonhalin/app/src/main/res/layout/activity_event.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_event.xml
@@ -49,5 +49,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:headerLayout="@layout/nav_header_side_main"/>
 </android.support.v4.widget.DrawerLayout>
