--- a/pyeonhalin/app/src/main/res/layout/activity_home.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_home.xml
@@ -73,14 +73,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/test_btn_2" />
     </android.support.constraint.ConstraintLayout>
-
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:headerLayout="@layout/nav_header_side_main"/>
+
+
 
 </android.support.v4.widget.DrawerLayout>
 
