--- a/pyeonhalin/app/src/main/res/layout/activity_sort.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_sort.xml
@@ -10,7 +10,7 @@
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SortActivity">
+    tools:context="activity.SortActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
