--- a/templates/owner_item_upload.html
+++ b/templates/owner_item_upload.html
@@ -7,6 +7,9 @@
 <body>
 <form method="POST">
     <p>
+      <input type="text" name="id" value="">
+    </p>
+    <p>
       <input type="text" name="itemName" value="">
     </p>
     <p>
