--- a/pyeonhalin/app/src/main/res/layout/activity_base.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_base.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="activity.BaseActivity">
+    tools:context=".activity.BaseActivity">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
