--- a/pyeonhalin/app/src/main/res/layout/activity_home.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="activity.HomeActivity">
+        tools:context=".activity.HomeActivity">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
