--- a/pyeonhalin/app/src/main/res/layout/activity_recently_viewed.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_recently_viewed.xml
@@ -10,37 +10,24 @@
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SortActivity">
+    tools:context=".activity.RecentlyViewedActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <include
             layout="@xml/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.design.widget.AppBarLayout>
 
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/sort_tabs"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        android:layout_height="match_parent"
+        android:background="#dddddd" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/sort_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@+id/navigation"
-        app:layout_constraintTop_toBottomOf="@+id/sort_tabs" />
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
@@ -48,8 +35,6 @@
         android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/navigation" />
-
-
 </android.support.constraint.ConstraintLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
