--- a/pyeonhalin/app/src/main/res/layout/nav_header_side_main.xml
+++ b/pyeonhalin/app/src/main/res/layout/nav_header_side_main.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/headNameTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -28,9 +29,16 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/headIDTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="F.ch@gmail.com" />
+
+    <TextView
+        android:id="@+id/headKeyTV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="" />
 
 </LinearLayout>
