--- a/pyeonhalin/app/src/main/res/layout/activity_map.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_map.xml
@@ -24,8 +24,9 @@
         </android.support.design.widget.AppBarLayout>
 
 
-        <RelativeLayout
-            android:id="@+id/map_view"
+        <fragment
+            android:id="@+id/map"
+            android:name="com.naver.maps.map.MapFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/navigation"
