--- a/pyeonhalin/app/src/main/res/menu/activity_main_drawer.xml
+++ b/pyeonhalin/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,6 +21,10 @@
             <item
                 android:id="@+id/setting"
                 android:title="설정" />
+            <item
+                android:id="@+id/addItem"
+                android:title="상품등록"
+                android:visible="false"/>
         </menu>
     </item>
 
