--- a/pyeonhalin/app/src/main/res/values/arrays.xml
+++ b/pyeonhalin/app/src/main/res/values/arrays.xml
@@ -6,5 +6,6 @@
         <item>2+1행사</item>
         <item>3+1행사</item>
         <item>증정품 증정</item>
+        <item>가격할인</item>
     </string-array>
 </resources>
