--- a/pyeonhalin/app/src/main/res/layout/dialog_sign_up.xml
+++ b/pyeonhalin/app/src/main/res/layout/dialog_sign_up.xml
@@ -29,14 +29,37 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/addressEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:editable="false"
+            android:ems="10"
+            android:hint="주소를 입력해주세요."
+            android:inputType="textPersonName" />
+
         <Button
-            android:id="@+id/loginButton"
+            android:id="@+id/addressButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="주소 찾기" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/registerButon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="25dp"
             android:layout_marginStart="25dp"
             android:layout_weight="1"
-            android:text="로그인" />
+            android:text="회원가입" />
 
         <Button
             android:id="@+id/cancleButon"
@@ -46,14 +69,7 @@
             android:layout_marginStart="25dp"
             android:layout_weight="1"
             android:text="취소" />
-        <Button
-            android:id="@+id/registerButon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="25dp"
-            android:layout_marginStart="25dp"
-            android:layout_weight="1"
-            android:text="회원가입" />
+
     </LinearLayout>
 
 </LinearLayout>
