--- a/templates/input_address(daum).html
+++ b/templates/input_address(daum).html
@@ -7,7 +7,7 @@
 <script>
     new daum.Postcode({
         oncomplete: function(data) {
-            window.TestApp.setAddress(data.zonecode, data.jibunAddress, data.buildingName);
+            window.TestApp.setAddress(data.jibunAddress);
         }
     }).open();
 </script>
