--- a/pyeonhalin/app/src/main/res/layout/activity_owner_manage_item.xml
+++ b/pyeonhalin/app/src/main/res/layout/activity_owner_manage_item.xml
@@ -24,8 +24,8 @@
         </android.support.design.widget.AppBarLayout>
 
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/manageItem_container"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/manageItem_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="start"
