--- a/pyeonhalin/app/src/main/res/layout/item_cardview.xml
+++ b/pyeonhalin/app/src/main/res/layout/item_cardview.xml
@@ -51,6 +51,17 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="53dp"
                 android:text="가격" />
+
+
+            <ImageView
+                android:id="@+id/mange_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/cardView_price"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_more_vert_gray_24dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
