--- a/pyeonhalin/app/src/main/res/layout/dialog_call_address.xml
+++ b/pyeonhalin/app/src/main/res/layout/dialog_call_address.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
-    android:layout_height="600dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#fff"
     android:orientation="vertical"
     app:layout_constraintTop_toTopOf="parent"
