--- a/templates/owner_item_delete.html
+++ b/templates/owner_item_delete.html
@@ -9,6 +9,7 @@
     <p>
       <input type="text" name="id" value="">
     </p>
+    <input type="text" name="itemName" value="">
   <input type="submit" value="회원가입">
 </body>
 </html>
