--- a/pyeonhalin/app/src/main/res/layout/item_cardview.xml
+++ b/pyeonhalin/app/src/main/res/layout/item_cardview.xml
@@ -53,7 +53,7 @@
                 android:text="가격" />
 
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/mange_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
