--- a/pyeonhalin/app/src/main/res/menu/navigation.xml
+++ b/pyeonhalin/app/src/main/res/menu/navigation.xml
@@ -20,12 +20,14 @@
     <item
         android:id="@+id/navigation_event"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="event" />
+        android:title="event"
+        android:visible="false"/>
 
     <item
         android:id="@+id/navigation_community"
         android:icon="@drawable/ic_message_black_24dp"
-        android:title="commnity" />
+        android:title="commnity"
+        android:visible="false"/>
 
 
 </menu>
